--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@sveltejs/adapter-auto": "^3.3.1",
 		"@sveltejs/kit": "^2.8.5",
 		"@sveltejs/vite-plugin-svelte": "^4.0.2",
+		"@zerodevx/svelte-toast": "^0.9.6",
 		"autoprefixer": "^10.4.20",
 		"prettier": "^3.4.1",
 		"prettier-plugin-svelte": "^3.3.2",
@@ -26,6 +27,8 @@
 		"vite": "^5.4.11"
 	},
 	"dependencies": {
+		"@midival/constants": "^0.0.1",
+		"@midival/core": "^0.1.7",
 		"@sveltejs/adapter-static": "^3.0.6",
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/typography": "^0.5.15"
